--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/6c127ee8bf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
   </head>
@@ -14,6 +15,11 @@
         CARAVAN
         </a>
       </h1>
+      <div class="social">
+        <i class="fa-brands fa-square-facebook"></i>
+        <i class="fa-brands fa-square-twitter"></i>
+        <i class="fa-brands fa-square-instagram"></i>
+      </div>
     </header>
 
     <nav>
