--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6c127ee8bf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
@@ -121,12 +122,12 @@
     </div>
     <div class="pagination">
     <p><<</p>
-    <p><</p>  
-    <p>1</p>  
-    <p>2</p>  
-    <p>3</p>  
-    <p>></p>  
-    <p>>></p>  
+    <p><</p>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>></p>
+    <p>>></p>
     </div>
       </section>
       <div class="sidebar">
